--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -107,6 +107,7 @@ decoration {
         enabled = true
         size = 7
         passes = 4
+        ignore_opacity = true
         new_optimizations = true
     }
 
@@ -174,7 +175,6 @@ windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
-
 
 # +------------------------------------------+
 # |        Environment variables             |
