--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -11,6 +11,7 @@
   "control-center-margin-bottom": 0,
   "control-center-margin-right": 0,
   "control-center-margin-left": 0,
+  "control-center-exclusive-zone": true,
   "notification-2fa-action": true,
   "notification-inline-replies": false,
   "notification-icon-size": 64,
@@ -106,7 +107,7 @@
         }
       ]
     },
- "buttons-grid": {
+    "buttons-grid": {
       "actions": [
         {
           "label": "直",
