--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,8 +61,10 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
 #exec-once = ~/.local/share/hyprload/hyprload.sh
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
+exec-once = wl-paste --watch cliphist store #Stores only text data
+#exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+#exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 #exec-once = wl-paste -t text --watch clipman store --no-persist
 #exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
 #exec-once = copyq --start-server
