--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = hypridle
 exec-once = hyprpm reload
-exec-once = wal -R
+#exec-once = wal -R
 #_____________________________________________#
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
