--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,3 @@
-include ./mocha.conf
 font_family      jetbrains mono nerd font
 font_size        9
 bold_font        auto
@@ -20,12 +19,11 @@ map kitty_mod+t     new_tab_with_cwd
 map ctrl+alt+\ launch --location=vsplit
 map ctrl+alt+- launch --location=hsplit
 map kitty_mod+z toggle_layout stack
-
+allow_remote_control yes
 scrollback_lines 10000000000
 
 
 
 # BEGIN_KITTY_THEME
-# Tango Dark
- include current-theme.conf
+include ./themes/fishtank.conf
 # END_KITTY_THEME
